fixed banner not covering bottom

--- a/signUpStyles.css
+++ b/signUpStyles.css
@@ -2,10 +2,12 @@
 /* BANNER FONT */ @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 
+* {
+    box-sizing: border-box;
+}
 
 html, body {     
-    margin: 0;
-    padding: 0;
+   
     box-sizing: border-box;
     background-color: black;
     font-size: 1.2rem;
@@ -16,46 +18,69 @@ html, body {
 .mainDiv {
     display: flex;
     flex-direction: row;
-    height: 100%;
-
-    width: 100vw;
+    justify-content: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
     flex: 1 1 0%;
+
+    align-items: stretch;
+    border: 0px solid black;
+    box-sizing: border-box;
+    flex-basis: auto;
+    margin: 0px;
+    min-height: 0px;
+    min-width: 0px;
+    padding: 0px;
+    position: relative;
+    z-index: 0;
+
 }
 
-.bannerImage {
+.banner-section-container {
     display: flex;
-    flex-direction: column;
-    width: 130%;
+    flex-grow: 1;
+    position: relative;
     height: 100vh;
+    width: 0.5vw;
 }
 
+.image {
+    position: fixed;
+    width: 45vw;
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+    top: 0;
+
+
+
+}
+
+
+/* RIGHT SIDE */
 
 .right-section-container {
     display: flex;
     flex-direction: column;
-}
+    width: 60vw;
+    flex: 1 1 0%;
+    padding-bottom: 80px;
+    justify-content: center;
+    min-height: 100vh;
+    max-width: 400px;
 
-.title-header-container {
-    margin: auto;
-    width: 10%;
 }
 
 .title-logo-container {
-    flex-direction: column;
-    vertical-align: top;
-    display: inline-block;
-    justify-content: space-between;
-    align-items: start;
-    padding-top: 80px;   
-    margin: 0px 0px 36px;
     text-align: center;
 
-    position: relative;
-    top: -170px;
-    left: 145px;
+    display: flex;
+    padding: 27px 0px;
+
 }
 
-.title-logo-container > img {
+.santaPuercaImg {
     height: 50px;
     width: 150px;
     object-fit: cover;
@@ -71,6 +96,12 @@ html, body {
     letter-spacing: 10px;
 }
 
+.description {
+    text-align: center;
+    margin: 0px 0px 4px;
+    position: relative;
+}
+
 a {
     color: white;
     text-decoration: underline;
@@ -81,28 +112,68 @@ a:hover {
     text-decoration: none;
 }
 
-.signUp-container {
+
+
+.signUp-headline {
+
     
 }
 
+.title-logo-container {
+   
+}
+
+.picture-logo-container {
+
+}
+
+.SantaPuercaImg {
+
+}
+
 .signUp-header {
-    text-align: center;
-    margin: 0px 0px 4px;
+
+}
+
+.signUp-container {
+   
+}
+
+.signUp-panel-wrapper {
+
 }
 
 .signUp-panel {
-    margin-top: 3rem;
-
-    background-color: rgb(255, 255, 255);
-    border-radius: 32px;
-    padding: 12px 0px 40px;
-    overflow: hidden;
-    min-width: 400px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
 }
 
-
 .form {
+
+
+}
+
+.button-container {
+    margin: 0;
+    padding: 0;
+}
+
+.submitBtn {
+    font-family: 'Bebas Neue', cursive;
+    letter-spacing: 1.5px;
+    font-size: 1.25rem;
+    text-align: center;
+    max-width: 100%;
+    background-color: white;
+    outline: 0px;
+    border: 0px none;
+    border-radius: 8px;
+    width: 100%;
+    cursor: pointer;
+    margin: 0px;
+    padding: 0.75rem 3rem;
+    transition: all 0.125s ease 0s;
+}
+
+.submitBtn:hover {
+    color:white;
+    background-color: rgb(56, 56, 56);
 }
